# JusticeAI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEEPBRIDGE_DOCUMENTS_INDEX.md  DEEPBRIDGE_EXPLORATION_SUMMARY.md  DEEPBRIDGE_QUICK_REFERENCE.md  DEEPBRIDGE_STRUCTURE_ANALYSIS.md  INDEX.md  LICENSE  Makefile  PLANEJAMENTO_AGIL.md  PRODUCT_BACKLOG_DETALHADO.md  PROXIMOS_PASSOS.md  README.md  RESUMO_EXECUTIVO.md  fairness_report.html  mkdocs.yml  pyproject.toml
.github/workflows/: quality.yml  test.yml
desenvolvimento/: INDEX.md
desenvolvimento/sprints/: README.md  SPRINT_0.md  SPRINT_1.md  SPRINT_2.md  SPRINT_3.md  SPRINT_4.md  SPRINT_5.md
docs/: changelog.md  contributing.md  faq.md  gen_ref_pages.py  index.md
docs/api/: index.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/: adapters.md  compliance.md  metrics.md  overview.md  reports.md
docs/tutorials/: 01_quickstart.md  02_advanced_metrics.md  03_reports.md  index.md
examples/: README.md  continuous_monitoring.py  simple_report_example.py
justiceai/: __init__.py  api.py  fairness_evaluator.py
justiceai/compliance/: __init__.py  bacen.py  lgpd.py
justiceai/core/adapters/: __init__.py  base_adapter.py  lightgbm_adapter.py  model_factory.py  sklearn_adapter.py  xgboost_adapter.py
justiceai/core/evaluators/: threshold.py
justiceai/core/metrics/: calculator.py  posttrain.py  pretrain.py
justiceai/monitoring/: __init__.py  alerting.py  drift_detector.py
justiceai/reports/: __init__.py  fairness_report.py
justiceai/reports/charts/: base_chart.py  chart_factory.py  fairness_charts.py  threshold_charts.py
justiceai/reports/renderers/: html_renderer.py
justiceai/reports/templates/: fairness_report.html
justiceai/reports/transformers/: data_transformer.py
notebooks/: 01_quickstart.ipynb  02_advanced_metrics.ipynb  03_reports.ipynb
tests/: test_api.py  test_fairness_evaluator.py  test_import.py
tests/compliance/: test_bacen.py  test_lgpd.py
tests/monitoring/: test_alerting.py  test_drift_detector.py
tests/reports/: test_fairness_report.py
(+10 files in other folders)
